# ToyEngine

./: CMakeLists.txt  NOTES.md  PLAN.md  README.md  main.cpp
engine/: central.h  component.hpp  filesystem.hpp  gameobject.hpp  gui.hpp  mainloop.hpp  profiler.hpp  server.hpp
game/: gamestate.hpp  main.cpp  mainloop.hpp
